--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.20.2"
+    "knex": "^0.20.2",
+    "pg": "^7.12.1",
+    "postgresql": "0.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
