--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.2",
+    "knex-cleaner": "^1.3.0",
     "pg": "^7.12.1",
     "postgresql": "0.0.1"
   },
