--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "knex": "^0.20.2",
     "knex-cleaner": "^1.3.0",
     "pg": "^7.12.1",
-    "postgresql": "0.0.1"
+    "postgresql": "0.0.1",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
